pager and spacing fixes

--- a/resources/views/v2/components/FlightRow/FlightRow.css
+++ b/resources/views/v2/components/FlightRow/FlightRow.css
@@ -20,4 +20,5 @@
         color: $blue;
         font: $font-heading-lg;
         margin-bottom: $margin-xs;
+        line-height: $line-height-md;
     }
